HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/GenericPathMissingArguments/Source/Main.uv
//! Rejected polymorphism specimen for using a generic type path without type arguments.

internal record ValueBox<TValue> {
    internal value: TValue
}

public procedure genericPathMissingArgumentsReference(box: ValueBox) -> i32 {
    return 0
}
